packages/core/src/components/dropdown/dropdown.scss
/*
 * SPDX-FileCopyrightText: 2023 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

@import '~bootstrap/scss/functions';
@import 'common-variables';
@import '~bootstrap/scss/variables';
@import '~bootstrap/scss/mixins';
@import '~bootstrap/scss/dropdown';

@import 'mixins/fonts';
@import 'mixins/text-truncation';
@import 'components/dropdown';

:host {
  min-width: 0px;
}

:host(.dropdown-menu) {
  //overflow: visible !important;
  margin-right: 10px;
}

